Add Japanese support (experimential)

--- a/tests/wordfreq.html
+++ b/tests/wordfreq.html
@@ -3,7 +3,7 @@
 <head>
 	<title>WordFreq() tests</title>
 	<style type="text/css">
-	textarea {
+	#result {
 	position: fixed; top: 2em; right: 0;
 	font-family: monospace;
 	white-space: nowrap;
@@ -26,6 +26,12 @@
 <form method="get" action="#" id="processText_english">
 	<p><input type="submit" value="English" /></p>
 </form>
+<form method="get" action="#" id="processText_japanese">
+	<p><input type="submit" value="日文" /></p>
+</form>
+<form method="get" action="#" id="processText_user">
+	<p><textarea id="text_user"></textarea> <input type="submit" value="User Text" /></p>
+</form>
 <h2>wordfreq.terminate();</h2>
 <form method="get" action="#" id="terminate">
 	<p><input type="submit" value="test" /></p>
@@ -47,6 +53,133 @@
 	<p><input type="submit" value="test" /></p>
 </form>
 <h2>Source</h2>
+<textarea id="result" readonly="true" cols="80" rows="30">
+</textarea>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+<script type="text/javascript" src="../wordfreq.js"></script>
+<script type="text/javascript">
+jQuery(function ($) {
+
+	$('#supported').addClass((WordFreq.supported?'':'not_') + 'support');
+
+	var $r = $('#result');
+	function start() {
+		$r.val('start');
+	}
+	function done (obj) {
+		if (typeof obj === 'undefined') {
+			$r.val('done.');
+			return;
+		}
+		$r.val('done: \n' + JSON.stringify(obj).replace(/(\]\,)/g, '$1\n'));
+	}
+	function error(e) {
+		$r.val(e);
+		return true;
+	}
+
+	var text_chinese = $('#source_chinese').text();
+	var text_english = $('#source_english').text();
+	var text_japanese = $('#source_japanese').text();
+
+	var wordfreq = WordFreq({
+		worker: '../wordfreq.worker.js'
+	});
+
+	$('#processText_chinese').bind(
+		'submit',
+		function () {
+			try {
+				wordfreq.processText(text_chinese, done);
+			} catch (e) { error(e); }
+			start();
+			return false;
+		}
+	);
+
+	$('#processText_english').bind(
+		'submit',
+		function () {
+			try {
+				wordfreq.processText(text_english, done);
+			} catch (e) { error(e); }
+			start();
+			return false;
+		}
+	);
+
+	$('#processText_japanese').bind(
+		'submit',
+		function () {
+			try {
+				wordfreq.processText(text_japanese, done);
+			} catch (e) { error(e); }
+			start();
+			return false;
+		}
+	);
+
+	$('#processText_user').bind(
+		'submit',
+		function () {
+			try {
+				wordfreq.processText($('#text_user').val(), done);
+			} catch (e) { error(e); }
+			start();
+			return false;
+		}
+	);
+
+
+	$('#terminate').bind(
+		'submit',
+		function () {
+			try {
+				wordfreq.processText(text, done);
+				wordfreq.terminate();
+			} catch (e) { error(e); }
+			$r.val('This result should not be overwritten by done later.');
+			return false;
+		}
+	);
+	$('#empty').bind(
+		'submit',
+		function () {
+			try {
+				done(wordfreq.empty());
+			} catch (e) { error(e); }
+			return false;
+		}
+	);
+	$('#getList').bind(
+		'submit',
+		function () {
+			try {
+				done(wordfreq.getList());
+			} catch (e) { error(e); }
+			return false;
+		}
+	);
+	$('#getSortedList').bind(
+		'submit',
+		function () {
+			try {
+				done(wordfreq.getSortedList());
+			} catch (e) { error(e); }
+			return false;
+		}
+	);
+	$('#analyizeVolume').bind(
+		'submit',
+		function () {
+			try {
+				done(wordfreq.analyizeVolume());
+			} catch (e) { error(e); }
+			return false;
+		}
+	);
+});
+</script>
 <pre id="source_chinese">
 美利堅合眾國憲法
 
@@ -471,108 +604,186 @@ Attest William Jackson Secretary
 done in Convention by the Unanimous Consent of the States present the Seventeenth Day of September in the Year of our Lord one thousand seven hundred and Eighty seven and of the Independance of the United States of America the Twelfth In Witness whereof We have hereunto subscribed our Names,
 
 </pre>
-<textarea id="result" readonly="true" cols="80" rows="30">
-</textarea>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
-<script type="text/javascript" src="../wordfreq.js"></script>
-<script type="text/javascript">
-jQuery(function ($) {
+<pre id="source_japanese">
+前文
 
-	$('#supported').addClass((WordFreq.supported?'':'not_') + 'support');
+われら合衆国の人民は、より完全な連邦を形成し、正義を樹立し、国内の平穏を保障し、共同の防衛に備え、一般の福祉を増進し、われらとわれらの子孫の上に自由のもたらす恵沢を確保する目的をもって、アメリカ合衆国のために、この憲法を制定する。
+第1条
 
-	var $r = $('#result');
-	function start() {
-		$r.val('start');
-	}
-	function done (obj) {
-		if (typeof obj === 'undefined') {
-			$r.val('done.');
-			return;
-		}
-		$r.val('done: \n' + JSON.stringify(obj).replace(/(\]\,)/g, '$1\n'));
-	}
-	function error(e) {
-		$r.val(e);
-		return true;
-	}
+第1節　この憲法によって付与されるすべての立法権は、合衆国連邦議会に帰属する。連邦議会は上院と下院で構成される。
 
-	var text_chinese = $('#source_chinese').text();
-	var text_english = $('#source_english').text();
+第2節　下院は、各州の人民が2年ごとに選出する議員で組織される。各州の選挙人は、州議会で議員数の多い一院の選挙人に必要な資格を備えていなければならない。
 
-	var wordfreq = WordFreq({
-		worker: '../wordfreq.worker.js'
-	});
+2　何人も、25歳に達していない者、7年以上合衆国市民でない者、また選挙された時にその選出州の住民でない者は、下院議員となることができない。
 
-	$('#processText_chinese').bind(
-		'submit',
-		function () {
-			try {
-				wordfreq.processText(text_chinese, done);
-			} catch (e) { error(e); }
-			start();
-			return false;
-		}
-	);
+3　下院議員及び直接税は、この連邦に加入する各州の人口に比例して、各州の間で配分される。各州の人口は、年期契約奉公人を含み課税されないインディアンを除外した自由人の総数に、自由人以外のすべての人数の5分の3を加えたものとする。[1]実際の人口の算定は、合衆国連邦議会の最初の集会から3年以内に、そしてそれ以後10年ごとに、議会が法律で定める方法に従って行う。下院議員の定数は、人口3万人に対し1人の割合を超えてはならない。ただし、各州は少なくとも1人の下院議員を持つものとする。上述の算定が行われるまでは、ニューハンプシャー州は3名、マサチューセッツ州は8名、ロード・アイランド州及びプロビデンス定住地は1名、コネチカット州は5名、ニューヨーク州は6名、ニュージャージー州は4名、ペンシルベニア州は8名、デラウェア州は1名、メリーランド州は6名、バージニア州は10名、ノースカロライナ州は5名、サウスカロライナ州は5名、ジョージア州は3名、それぞれ選出する権利を有する。
 
-	$('#processText_english').bind(
-		'submit',
-		function () {
-			try {
-				wordfreq.processText(text_english, done);
-			} catch (e) { error(e); }
-			start();
-			return false;
-		}
-	);
+4　いずれの州においても、その選出下院議員に欠員が生じた場合、その州の行政府はそれを補充するため選挙施行の命令を発しなければならない。
 
-	$('#terminate').bind(
-		'submit',
-		function () {
-			try {
-				wordfreq.processText(text, done);
-				wordfreq.terminate();
-			} catch (e) { error(e); }
-			$r.val('This result should not be overwritten by done later.');
-			return false;
-		}
-	);
-	$('#empty').bind(
-		'submit',
-		function () {
-			try {
-				done(wordfreq.empty());
-			} catch (e) { error(e); }
-			return false;
-		}
-	);
-	$('#getList').bind(
-		'submit',
-		function () {
-			try {
-				done(wordfreq.getList());
-			} catch (e) { error(e); }
-			return false;
-		}
-	);
-	$('#getSortedList').bind(
-		'submit',
-		function () {
-			try {
-				done(wordfreq.getSortedList());
-			} catch (e) { error(e); }
-			return false;
-		}
-	);
-	$('#analyizeVolume').bind(
-		'submit',
-		function () {
-			try {
-				done(wordfreq.analyizeVolume());
-			} catch (e) { error(e); }
-			return false;
-		}
-	);
-});
-</script>
+5　下院は、その議長及び他の役員を選任し、また弾劾の権限を専有する。
+
+第3節　合衆国上院は、各州が2名ずつ選出する上院議員で組織される。その選出は州議会が行い、[2]その任期は6年とする。各上院議員は、1票の投票権を有する。
+
+2　第1回選挙の結果に基づいて、上院議員が集会した時、直ちにこれをできるだけ均等な3部に分ける。第1部の議員は2年目の終わりに、第2部の議員は4年目の終わりに、第3部の議員は6年目の終わりに、それぞれ議席を失うものとする。これにより、議員の3分の1が2年ごとに改選されるようになる。もし、いずれの州においても、州議会の休会中に、辞職その他の理由で欠員を生じた場合には、州の行政府は、州議会が次の開会時に補充を行うまでの間、臨時の任命をすることができる。[3]
+
+3　何人も、30歳に達しない者、9年以上合衆国市民でない者、また選挙された時にその選出州の住民でない者は、上院議員となることができない。
+
+4　合衆国の副大統領は、上院の議長となる。ただし、可否同数の場合を除き、表決には加わらない。
+
+5　上院は、議長を除く上院の他の役員を選任し、また副大統領が欠席するか又は合衆国大統領の職務を行う場合には、臨時議長を選任する。
+
+6　上院はすべての弾劾を審判する権限を専有する。この目的のために開会される場合には、議員は宣誓又は確約しなければならない。合衆国大統領が審判される場合には、最高裁判所長官が議長となる。何人といえども、出席議員の3分の2の同意がなければ、有罪の判決を受けることはない。
+
+7　弾劾事件の判決は、免官、及び合衆国政府の下に名誉、信任又は報酬を伴う官職に就任、在職する資格を剥奪すること以上に及んではならない。ただし、有罪の判決を受けた者でも、なお法律の規定に従って、起訴、審理、判決、処罰を受けることを免れない。
+
+第4節　上院議員及び下院議員の選挙を行う日時、場所及び方法は、各州において州議会が定める。しかし、連邦議会はいつでも、法律でその規則を制定又は変更することができる。ただし、上院議員の選挙を行う場所に関してはこの限りでない。
+
+2　連邦議会は、少なくとも毎年1回集会する。その集会は、法律で別の日を定めない限り、12月の第1月曜日[4]とする。
+
+第5節　各議院は、その議員の選挙、選挙結果の報告及び資格について判定を行う。各議院の議員の過半数をもって、議事を行うに必要な定足数とする。定足数に満たない場合は、その当日に休会し、また各議院の定める方法や制裁をもって、欠席議員の出席を強制することができる。
+
+2　各議院はそれぞれ、議事規則を定め、院内の秩序を乱した議員を懲罰し、また3分の2の同意によって議員を除名することができる。
+
+3　各議院はそれぞれ、議事録を作成し、各議院が秘密を要すると判断する事項を除いて、随時これを公表する。各議院の議員の賛否は、いかなる議題であれ、出席議員の5分の1の請求があるときは、これを議事録に記載しなければならない。
+
+4　連邦議会の会期中、いずれの議院も他の議院の同意がなければ、3日以上休会し、又はその議場を両議院の開会中の場所以外へ移してはならない。
+
+第6節　上院議員及び下院議員は、その役務に対し、法律で確定され、合衆国国庫から支出される報酬を受ける。両議院の議員は、反逆罪、重罪及び公安を害する罪以外のあらゆる場合において、会期中の議院に出席中、又はこれへの往復途上で、逮捕されない特権を有する。議員はまた、議院内における発言又は討議について、議院外で審問されることはない。
+
+2　上院及び下院の議員は、その任期中に新設、又は増俸された合衆国の文官職に、その選出された任期の間任命されてはならない。また何人といえども、合衆国の官職にある者は、その在職中にいずれの議院の議員にもなることはできない。
+
+第7節　歳入の徴収に関するすべての法案は、まず下院で発議されなければならない。ただし、他の法案におけると同じく、上院はこれに対し修正案を発議するか、又は修正を付して同意することができる。
+
+2　下院及び上院を通過したすべての法案は、法律となるに先立ち、合衆国大統領に送付されなければならない。大統領が承認するときはこれに署名し、承認しないときには拒否理由を添えて、これを発議した議院に還付する。その議院は、その拒否理由の全部を議事録に記載し、法案を再審議する。再審議の結果、その議院の3分の2がその法案の通過に同意した場合は、法案は大統領の拒否理由と共に他の議院に送付され、他の議院でも同様に再審議を行う。そして再び3分の2をもって可決された場合には、その法案は法律となる。これらの場合すべてにおいて、両議院における表決は、賛否の表明によってなされ、法案の賛成投票者及び反対投票者の氏名は、各議院の議事録に記載されるものとする。もし法案が大統領に送付されてから10日以内（日曜日を除く）に還付されないときは、その法案は大統領が署名した場合と同様に法律となる。ただし、連邦議会の休会により、法案を還付することができない場合は法律とはならない。
+
+3　上院及び下院の同意を必要とする命令、決議又は表決（休会決議を除く）はすべて、これを合衆国大統領に送付するものとする。それが効力を生ずるに先立ち、大統領の承認を得なければならない。大統領の承認のない場合には、法案の場合について定められた規則及び制限に従って、上院及び下院の3分の2により、再び可決されなければならない。
+
+第8節　連邦議会は次の権限を有する。合衆国の国債を支払い、共同の防衛及び一般の福祉に備えるために、租税、関税、付加金、消費税を賦課徴収すること。ただし、すべての関税、付加金、消費税は、合衆国全土で同一でなければならない。
+
+2　合衆国の信用において金銭を借り入れること。
+
+3　諸外国との通商、及び各州間並びにインディアン部族との通商を規定すること。
+
+4　合衆国全土で同一の帰化の規則及び倒産に関する法律を定めること。
+
+5　貨幣を鋳造し、その価値及び外国貨幣の価値を定め、また度量衡の標準を定めること。
+
+6　合衆国の証券及び通貨の偽造に関する罰則を定めること。
+
+7　郵便局及び郵便道路を建設すること。
+
+8　著作者及び発明者に、一定期間それぞれの著作及び発明に対し独占的権利を保障することによって、学術及び技芸の進歩を促進すること。
+
+9　最高裁判所の下に、下級裁判所を組織すること。
+
+10　公海における海賊行為及び他の重罪、並びに国際法に反する犯罪を定義し、処罰すること。
+
+11　戦争を宣言し、敵国船傘捕免許状を付与し、陸上及び海上における捕獲に関する規則を設けること。
+
+12　陸軍を募集し、維持すること。ただし、この目的で使われる歳出予算は、2年を超える期間にわたってはならない。
+
+13　海軍を創設し、維持すること。
+
+14　陸海軍の統轄及び規律に関する規則を定めること。
+
+15　連邦の法律を施行し、反乱を鎮圧し、また侵略を撃退するための民兵の招集に関する規定を設けること。
+
+16　民兵の編制、武装及び規律に関し、また合衆国の軍務に服する民兵の統轄に関して規定を設けること。ただし、各州は、将校を任命し、また連邦議会の規定に従って、民兵を訓練する権限を留保する。
+
+17　ある州が譲渡し、連邦議会が受諾することにより、合衆国政府の所在地となる地区（ただし10マイル四方を超えてはならない）に対して、いかなる事項に関しても、独占的な立法権を行使すること。要塞、武器庫、造兵廠、造船所及びその他必要な建造物の建設のために、それが所在する州の議会の同意を得て購入した区域すべてに対し、同様の権限を行使すること。
+
+18　上記の権限、並びにこの憲法によって合衆国政府又はその省庁若しくは公務員に対し与えられた他のすべての権限を行使するために、必要かつ適当なすべての法律を制定すること。
+
+第9節　現存の諸州のいずれかが、入国を適当と認める人々の移住及び輸入に対しては、連邦議会は1808年以前においてこれを禁止することはできない。しかし、そのような輸入に対して、1人当たり10ドルを超えない租税又は入国税を課すことができる。
+
+2　人身保護令状の特権は、反乱又は侵略に際し公共の安全上必要とされる場合のほか、これを停止してはならない。
+
+3　私権剥奪法又は遡及処罰法はこれを制定してはならない。
+
+4　人頭税その他の直接税は、前に規定した国勢調査又は算定に基づく割合によらなければ、これを賦課してはならない。
+
+5　各州から輸出される物品には、租税又は関税を賦課してはならない。
+
+6　通商又は徴税を規定することによって、一州の港湾を他州の港湾より優遇してはならない。また、一州に向かう船舶又は一州より出港した船舶を強制して、他州に入港させ、出入港手続をさせたり、又は関税の支払をさせてはならない。
+
+7　国庫からの支出は、法律で定める歳出予算に従う以外は一切行われてはならない。すべての公金の収支に関する正式の予算決算書は随時公表しなければならない。
+
+8　合衆国は貴族の称号を授与してはならない。何人も、合衆国政府の下に報酬又は信任を伴う官職にある者は、連邦議会の同意なくして、国王、公侯又は外国から、いかなる種類の贈与、俸給、官職又は称号も受けてはならない。
+
+第10節　各州は、条約、同盟あるいは連合を結び、敵国船拿捕免許状を付与し、貨幣を鋳造し、信用証券を発行し、金銀貨幣以外のものを債務弁済の法定手段とし、私権剥奪法、遡及処罰法あるいは契約上の債務を損なうような法律を制定し、又は貴族の称号を授与してはならない。
+
+2　各州は、その検査法施行のために絶対に必要な場合を除き、連邦議会の同意なしに、輸入又は輸出に対し、付加金又は関税を課することはできない。各州によって輸出入に課された関税又は付加金の純収入は、合衆国国庫の用途に充てられる。この種の法律は、すべて連邦議会の修正及び管轄に服する。
+
+3　各州は、連邦議会の同意なしに、トン税を賦課し、平時において軍隊若しくは軍艦を備え、他州若しくは外国と協約若しくは協定を結び、又は現実に侵略を受けた場合、若しくは猶予しがたい急迫の危険がある場合でない限り、戦争行為をしてはならない。
+第2条
+
+第1節　行政権は、アメリカ合衆国大統領に帰属する。大統領の任期は4年とし、同一任期で選任される副大統領とともに、以下の方法で選挙される。
+
+2　各州は、その州議会の定める方法により、その州から連邦議会に選出できる上院及び下院の議員の総数と等しい数の選挙人を任命する。ただし、両院の議員、又は合衆国政府の下で信任あるいは報酬を受ける官職にある者は、選挙人に任命されてはならない。
+
+3　選挙人は、それぞれの州で会合し、秘密投票によって2名を選挙する。その中の少なくとも1名は、選挙人と同一州の住民であってはならない。選挙人は得票者及びそれぞれの得票数の表を作成し、これに署名し証明をした上で封印をし、上院議長に宛て、合衆国政府の所在地に送付する。上院議長は、上院議員及び下院議員の出席の下に、すべての証明書を開封し、次いで投票が計算される。最多得票数が選挙人総数の過半数である場合には、その最多得票者が大統領となる。過半数を得た者が1名を超え、その得票数が同じ場合には、下院は直ちに秘密投票により、その中の1名を大統領に選任する。また、もし過半数を得た者のない場合は、前述の表の中で最多得票者5名のうちから、同じ方法により下院が大統領を選任する。ただし、この方法で大統領を選挙する場合、各州の下院議員団はそれぞれ1票を有するものとし、投票は州を単位として行う。この目的のための定足数は、全州の3分の2から1名又はそれ以上の議員が出席することによって成立し、また選任のためには全州の過半数が必要である。いずれの場合においても、大統領に選任された者に次いで最多得票をした者が副大統領となる。しかし、もしその場合、同数の得票者が2名以上あれば、上院がその中から秘密投票によって副大統領を選任する。[5]
+
+4　連邦議会は、選挙人を選任する時期及び彼らが投票を行う日を定めることができる。この日は合衆国全土を通じて同じ日でなければならない。
+
+5　何人も、出生による合衆国市民又はこの憲法確定時における合衆国市民でなければ、大統領となることはできない。35歳に達しない者、また14年以上合衆国の住民でない者は、大統領となることはできない。
+
+6　大統領が免職、死亡、辞任し、又はその権限及び義務を遂行する能力を失った場合は、その職務権限は副大統領に帰属する。連邦議会は、大統領及び副大統領が共に、免職、死亡、辞任し又は能力を喪失した場合について法律で規定し、その場合に大統領の職務を行うべき公務員を定めることができる。この公務員は、これにより、上記のような障害が除去されるか、又は大統領が選任されるまで、その職務を行う。[6]
+
+7　大統領は、その役務に対して定時に報酬を受け、その額はその任期中増減されることはない。大統領は、その任期中、合衆国又は各州から他のいかなる報酬も受けてはならない。
+
+8　大統領は、その職務の遂行を開始する前に、次のような宣誓又は確約をしなければならない。「私は合衆国大統領の職務を忠実に遂行し、全力を尽して合衆国憲法を維持、保護、擁護することを厳粛に誓う（又は確約する）。」
+
+第2節　大統領は、合衆国の陸海軍及び合衆国の軍務に実際に就くため召集された各州の民兵の最高司令官である。大統領は行政各部の長官から、それぞれの部の職務に関するいかなる事項についても、文書による意見を求めることができる。大統領はまた合衆国に対する犯罪につき、弾劾の場合を除いて、刑の執行延期及び恩赦を行う権限を有する。
+
+2　大統領は、上院の助言と同意を得て、条約を締結する権限を有する。ただし、この場合には、上院の出席議員の3分の2の賛同が必要である。また大統領は、大使、その他の外交使節及び領事、最高裁判所判事、並びに本憲法にその任命に関する特別の規定がなく、また法律によって設置される他のすべての合衆国公務員を指名し、上院の助言と同意を得て、これを任命する。ただし、連邦議会は、その適当と認める下級公務員の任命権を、法律によって、大統領のみに、司法裁判所に、又は各省の長官に与えることができる。
+
+3　大統領は、上院の閉会中に生じたすべての欠員を、任命により補充する権限を有する。ただし、その任命は次の会期の終わりに効力を失う。
+
+第3節　大統領は、連邦議会に対し、随時連邦の状況に関する情報を提供し、また自ら必要かつ適切と考える施策について議会に審議を勧告する。大統領は、非常の場合には、両議院又はその一院を招集することができる。また閉会の時期に関して両議院の間に意見の一致を欠く場合には、自ら適当と考える時期まで休会させることができる。大統領は、大使その他の外交使節を接受する。大統領は、法律が忠実に施行されるよう配慮し、また合衆国のすべての公務員を任命する。
+
+第4節　大統領、副大統領及び合衆国のすべての文官は、反逆罪、収賄罪又はその他の重罪及び軽罪につき弾劾され、かつ有罪の判決を受けた場合は、その職を免ぜられる。
+第3条
+
+第1節　合衆国の司法権は、一つの最高裁判所、並びに連邦議会が随時制定、設置する下級裁判所に帰属する。最高裁判所及び下級裁判所の判事は、善行を保持する限り、その職を保ち、またその役務に対し定時に報酬を受ける。その額は在職中減ぜられることはない。
+
+第2節　司法権は次の諸事件に及ぶ。すなわち、本憲法、合衆国の法律及び合衆国の権限により締結され、又は将来締結される条約の下に発生するすべての普通法及び衡平法上の事件。大使その他の外交使節及び領事に関するすべての事件。海事裁判及び海上管轄に関するすべての事件。合衆国が当事者の一方である争訟。二つ又はそれ以上の州の間の争訟、一州と他州の市民との間の争訟、[7]異なる州の市民の間の争訟、異なる諸州の付与に基づく土地の権利を主張する一州の市民間の争訟、並びに一州又はその市民と、他の国家、外国市民又は外国臣民との間の争訟。[8]
+
+2　大使その他の外交使節及び領事に関する事件、並びに州が当事者であるすべての事件については、最高裁判所が第一審管轄権を有する。前項に述べたその他すべての事件については、最高裁判所は、連邦議会の定める例外の場合を除き、またその定める規定に従い、法律及び事実に関し、上訴管轄権を有する。
+
+3　弾劾の場合を除き、すべての犯罪の裁判は陪審によって行われるものとする。裁判はその犯罪が行われた州で行われる。ただし、犯罪地がいずれの州にも属しない場合は、裁判は、連邦議会が法律で指定する場所で行われる。
+
+第3節　合衆国に対する反逆罪は、合衆国に対して戦争を始め、又は敵に援助及び便宜を与えてこれに加担する行為のみに限られる。何人も、同一の明白な行為に対する2人の証人の証言があるか、又は公開の法廷における自白に基づく場合を除いては、反逆罪として有罪の宣告を受けることがない。
+
+2　連邦議会は、反逆罪の刑罰を宣告する権限を有する。しかし、反逆罪の判決に基づく私権剥奪によって、その処罰を受けた者の生存中を除くほか、血統汚損又は財産没収が生じてはならない。
+第4条
+
+第1節　各州は、他州の法令、記録及び司法上の手続に対して十分の信頼及び信用を与えなくてはならない。連邦議会は、これらの法令、記録及び手続を証明する方法とその効力につき、一般の法律で規定することができる。
+
+第2節　各州の市民は、諸州において市民が持つすべての特権及び免除を等しく享受する権利を有する。
+
+2　一州において反逆罪、重罪又はその他の犯罪について告発された者は、裁判を逃れて他州内で発見されたときには、その逃れ出た州の行政当局の要求に応じて、その犯罪の裁判管轄権を有する州に移すために引き渡されなくてはならない。
+
+3　何人も、一州においてその法律の下に服役又は労働に従う義務のある者は、他州に逃亡することによって、その州の法律又は規則により、右の服役又は労働から解放されることはなく、右の服役又は労働に対し権利を有する当事者の請求に応じて引き渡されなければならない。
+
+第3節　新しい州は、連邦議会の決定によって、この連邦への加入を許されるものとする。しかし、連邦議会と関係諸州の議会の同意なくして、他の州の管轄内に新しい州を形成又は創設してはならず、また二つかそれ以上の州又は州の一部が合併して州を形成してはならない。
+
+2　連邦議会は、合衆国に直属する領土又はその他の財産を処分し、これに関して必要なすべての規則及び規定を定める権限を有する。この憲法のいかなる規定も、合衆国又は特定の一州の有する権利を損なうように解釈されてはならない。
+
+第4節　合衆国は、この連邦内の各州に共和政体を保障し、また侵略に対し各州を防護し、また州内の暴動に対し、州議会あるいは（州議会の招集が可能でないときは）州行政府の請求に応じて、各州に保護を与えなければならない。
+第5条
+
+連邦議会は、両議院の3分の2が必要と認めるときは、この憲法に対する修正を発議しなければならず、また全州の3分の2の議会の請求があるときは、修正発議のための憲法会議を招集しなければならない。いずれの場合においても、修正は、全州の4分の3の議会によって承認されるか、又は4分の3の州における憲法会議によって承認されるときは、あらゆる意味において、この憲法の一部として効力を有する。いずれの承認方法を採るかは、連邦議会が提案することができる。ただし、1808年以前に行われる修正によって、第1条第9節第1項及び第4項の規定に変更を及ぼすことはできない。また、いずれの州も、その同意なくして、上院における平等の投票権を奪われることはない。
+第6条
+
+この憲法の確定以前に契約されたすべての債務及び締結されたすべての約定は、連合規約の下におけると同じく、この憲法の下においても合衆国に対して有効である。
+
+2　この憲法、これに準拠して制定される合衆国の法律、及び合衆国の権限をもってすでに締結され、また将来締結されるすべての条約は、国の最高の法規である。これによって各州の裁判官は、各州憲法又は州法の中に反対の規定がある場合でも、これに拘束される。
+
+3　前述の上院議員及び下院議員、各州議会の議員、並びに合衆国及び各州のすべての行政官及び司法官は、宣誓又は確約により、この憲法を擁護する義務を負う。しかし、合衆国のいかなる官職又は信任による公職についても、その資格として宗教上の審査を課せられることはない。
+第7条
+
+九つの州の憲法会議による承認があるときは、本憲法を承認した諸州の間において同憲法が確定発効するに十分であるものとする。
+</pre>
+
 </body>
 </html>
