--- a/en/index.html
+++ b/en/index.html
@@ -131,6 +131,7 @@
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
 <script type="text/javascript" src="../jquery.wordcloud.js"></script>
+<script type="text/javascript" src="../jquery.getcontent.js"></script>
 <script type="text/javascript" src="../wordfreq.js"></script>
 <script type="text/javascript" src="../wordcloud.js"></script>
 <script type="text/javascript">
