Add meta charset to test pages

--- a/tests/wordfreq.html
+++ b/tests/wordfreq.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta charset=UTF-8>
 	<title>WordFreq() tests</title>
 	<style type="text/css">
 	#result {
