--- a/tests/jquery.getcontent.html
+++ b/tests/jquery.getcontent.html
@@ -196,7 +196,7 @@ jQuery(function ($) {
                 $.getContent(
                     fbUser.id,
                     {
-                        type: 'fbok',
+                        type: 'facebook',
                         beforeComplete: beforeComplete,
                         complete: complete
                     }
