Facebook function UI tweak

--- a/en/index.html
+++ b/en/index.html
@@ -156,7 +156,7 @@ var T = {
 	errorReading: 'Reading error, please try again later.',
 	errorWordCount: 'Not enough word/phrases to show.',
     clickToAnalyzer: 'Click Start to execute analyzer',
-    needLogin: '<a id="fb_login" href="#">Login facebook</a> to get your feed',
+    needLogin: '<a id="fb_login" href="#">Login Facebook</a> to get your feed',
     needWaiting: 'Get facebook feeds require half minute, ',
 	startList_1: 'HTML5 Word Cloud',
 	startList_1C: 45,
