--- a/zh/index.html
+++ b/zh/index.html
@@ -159,7 +159,7 @@ var T = {
 	errorReading: '讀取失敗，請稍後再試。',
 	errorWordCount: '取得詞彙數量太少，請選其他內容。',
     clickToAnalyzer: '按『開始』分析內容',
-    needLogin: '<a id="fb_login" href="#">登入 facebook</a>取得分析內容',
+    needLogin: '<a id="fb_login" href="#">登入 Facebook</a> 取得分析內容',
     needWaiting: '取得 Facebook 留言約費時半分鐘，',
 	startList_1: 'HTML5 文字雲',
 	startList_1C: 60,
