Revise Fb panel wording

--- a/en/index.html
+++ b/en/index.html
@@ -155,9 +155,8 @@ var T = {
 	analyzing: 'Analyzing ...',
 	errorReading: 'Reading error, please try again later.',
 	errorWordCount: 'Not enough word/phrases to show.',
-    clickToAnalyzer: 'Click Start to execute analyzer',
-    needLogin: '<a id="fb_login" href="#">Login Facebook</a> to get your feed',
-    needWaiting: 'Get facebook feeds require half minute, ',
+	fbNeedLogin: 'Please <a id="fb_login" href="#">login to Facebook</a> first.',
+	fbReady: 'Ready. Click "Start" to access you Facebook wall.',
 	startList_1: 'HTML5 Word Cloud',
 	startList_1C: 45,
 	startList_2: '文字雲',
