--- a/zh/index.html
+++ b/zh/index.html
@@ -158,9 +158,8 @@ var T = {
 	analyzing: '分析中 ...',
 	errorReading: '讀取失敗，請稍後再試。',
 	errorWordCount: '取得詞彙數量太少，請選其他內容。',
-    clickToAnalyzer: '按『開始』分析內容',
-    needLogin: '<a id="fb_login" href="#">登入 Facebook</a> 取得分析內容',
-    needWaiting: '取得 Facebook 留言約費時半分鐘，',
+	fbNeedLogin: '請先 <a id="fb_login" href="#">登入 Facebook</a>。',
+	fbReady: '已登入，按『開始』分析內容。',
 	startList_1: 'HTML5 文字雲',
 	startList_1C: 60,
 	startList_2: 'Word Cloud',
