+ link to Facebook Javascript SDK

--- a/en/index.html
+++ b/en/index.html
@@ -130,6 +130,7 @@
 		<p>Data feeds:</p>
 		<ul>
 			<li><a href="https://code.google.com/apis/feed/" target="_blank">Google Feed API</a></li>
+			<li><a href="https://developers.facebook.com/docs/reference/javascript/" target="_blank">Facebook JavaScript SDK</a></li>
 			<!--<li><a href="http://developer.yahoo.com/yql/" target="_blank">YQL API</a></li>-->
 		</ul>
 	<button>Close</button>		
