--- a/zh/index.html
+++ b/zh/index.html
@@ -133,6 +133,7 @@
 		<p>資料提供：</p>
 		<ul>
 			<li><a href="https://code.google.com/apis/feed/" target="_blank">Google Feed API</a></li>
+			<li><a href="https://developers.facebook.com/docs/reference/javascript/" target="_blank">Facebook JavaScript SDK</a></li>
 			<!--<li><a href="http://developer.yahoo.com/yql/" target="_blank">YQL API</a></li>-->
 		</ul>
 	<button>關閉</button>		
