Add pansci.tw to list of demo (zh)

--- a/zh/index.html
+++ b/zh/index.html
@@ -83,6 +83,7 @@
 		<p class="menu">
 			<label><input type="radio" name="demo" value="feed:http://www.president.gov.tw/RSS.aspx?tabid=1104&amp;moduleid=2074" checked /> 馬英九總統治國週記	</label>
 			<!--<label><input type="radio" name="demo" value="html:http://zh.wikipedia.org/zh-tw/台灣" /> 中文維基百科「台灣」條目 <a href="http://zh.wikipedia.org/zh-tw/%E5%8F%B0%E7%81%A3" target="_blank" class="link famfamfam_sprite application_double">link</a></label>-->
+			<label><input type="radio" name="demo" value="feed:http://feeds.feedburner.com/Pansci" /> 泛科學探索實驗空間 <a href="http://pansci.tw/" target="_blank" class="link famfamfam_sprite application_double">link</a></label>
 			<label><input type="radio" name="demo" value="feed:http://et.e-info.org.tw/rss.xml" /> 環境信託「全民來認股 守護白海豚」網站 <a href="http://et.e-info.org.tw/" target="_blank" class="link famfamfam_sprite application_double">link</a></label>
 			<label><input type="radio" name="demo" value="feed:http://sophist4ever.pixnet.net/blog/feed/rss" /> 假圖天國 <a href="http://sophist4ever.pixnet.net/blog" target="_blank" class="link famfamfam_sprite application_double">link</a></label>
 			<label><input type="radio" name="demo" value="feed:http://richter.pixnet.net/blog/feed/rss" /> 地圖會說話 <a href="http://richter.pixnet.net/blog" target="_blank" class="link famfamfam_sprite application_double">link</a></label>
