Enable YQL-HTML on UI

--- a/en/index.html
+++ b/en/index.html
@@ -67,9 +67,9 @@
 	<p class="menu panel_left">
 		<label class="generic"><span class="famfamfam_sprite award_star_bronze_1"></span><input type="radio" name="source" value="demo" checked /> Examples</label>
 		<label class="generic"><span class="famfamfam_sprite feed"></span><input type="radio" name="source" value="feed" /> RSS Feed</label>
-		<!--<label class="generic"><span class="famfamfam_sprite page_world"></span><input type="radio" name="source" value="html" /> Webpages</label>-->
+		<label class="generic"><span class="famfamfam_sprite page_world"></span><input type="radio" name="source" value="html" /> Webpages</label>
 		<label class="generic"><span class="famfamfam_sprite disk"></span><input type="radio" name="source" value="file" /> Local file</label>
-		<!--<label><input type="radio" name="source" value="wiki" /> Wikipedia</label>-->
+		<label><input type="radio" name="source" value="wiki" /> Wikipedia</label>
 		<label><input type="radio" name="source" value="blog:blogger" /> Blogger</label>
 		<label><input type="radio" name="source" value="blog:twitter"/> Twitter</label>
         <label><input type="radio" name="source" value="fbok"/> Facebook</label>
@@ -131,7 +131,7 @@
 		<ul>
 			<li><a href="https://code.google.com/apis/feed/" target="_blank">Google Feed API</a></li>
 			<li><a href="https://developers.facebook.com/docs/reference/javascript/" target="_blank">Facebook JavaScript SDK</a></li>
-			<!--<li><a href="http://developer.yahoo.com/yql/" target="_blank">YQL API</a></li>-->
+			<li><a href="http://developer.yahoo.com/yql/" target="_blank">YQL API</a></li>
 		</ul>
 	<button>Close</button>		
 	</div>
