--- a/zh/index.html
+++ b/zh/index.html
@@ -67,9 +67,9 @@
 	<p class="menu panel_left">
 		<label class="generic"><span class="famfamfam_sprite award_star_bronze_1"></span><input type="radio" name="source" value="demo" checked /> 範例資料</label>
 		<label class="generic"><span class="famfamfam_sprite feed"></span><input type="radio" name="source" value="feed" /> RSS Feed</label>
-		<!--<label class="generic"><span class="famfamfam_sprite page_world"></span><input type="radio" name="source" value="html" /> 網頁</label>-->
+		<label class="generic"><span class="famfamfam_sprite page_world"></span><input type="radio" name="source" value="html" /> 網頁</label>
 		<label class="generic"><span class="famfamfam_sprite disk"></span><input type="radio" name="source" value="file" /> 硬碟裡的檔案</label>
-		<!--<label><input type="radio" name="source" value="wiki" /> 中文維基百科</label>-->
+		<label><input type="radio" name="source" value="wiki" /> 中文維基百科</label>
 		<label><input type="radio" name="source" value="blog:blogger" /> Blogger</label>
 		<label><input type="radio" name="source" value="blog:pixnet"/> 痞客邦部落格</label>
 		<label><input type="radio" name="source" value="blog:wretch"/> 無名小站部落格</label>
@@ -82,9 +82,9 @@
 		<p>分析來源範例</p>
 		<p class="menu">
 			<label><input type="radio" name="demo" value="feed:http://www.president.gov.tw/RSS.aspx?tabid=1104&amp;moduleid=2074" checked /> 馬英九總統治國週記	</label>
-			<!--<label><input type="radio" name="demo" value="html:http://zh.wikipedia.org/zh-tw/台灣" /> 中文維基百科「台灣」條目 <a href="http://zh.wikipedia.org/zh-tw/%E5%8F%B0%E7%81%A3" target="_blank" class="link famfamfam_sprite application_double">link</a></label>-->
 			<label><input type="radio" name="demo" value="feed:http://feeds.feedburner.com/Pansci" /> 泛科學探索實驗空間 <a href="http://pansci.tw/" target="_blank" class="link famfamfam_sprite application_double">link</a></label>
 			<label><input type="radio" name="demo" value="feed:http://feeds.feedburner.com/blogspot/gCLK" /> 阿簡生物筆記 <a href="http://a-chien.blogspot.com/" target="_blank" class="link famfamfam_sprite application_double">link</a></label>
+			<label><input type="radio" name="demo" value="html:http://zh.wikipedia.org/zh-tw/台灣" /> 中文維基百科「台灣」條目 <a href="http://zh.wikipedia.org/zh-tw/%E5%8F%B0%E7%81%A3" target="_blank" class="link famfamfam_sprite application_double">link</a></label>
 			<label><input type="radio" name="demo" value="feed:http://et.e-info.org.tw/rss.xml" /> 環境信託「全民來認股 守護白海豚」網站 <a href="http://et.e-info.org.tw/" target="_blank" class="link famfamfam_sprite application_double">link</a></label>
 			<label><input type="radio" name="demo" value="feed:http://sophist4ever.pixnet.net/blog/feed/rss" /> 假圖天國 <a href="http://sophist4ever.pixnet.net/blog" target="_blank" class="link famfamfam_sprite application_double">link</a></label>
 			<label><input type="radio" name="demo" value="feed:http://richter.pixnet.net/blog/feed/rss" /> 地圖會說話 <a href="http://richter.pixnet.net/blog" target="_blank" class="link famfamfam_sprite application_double">link</a></label>
@@ -135,7 +135,7 @@
 		<ul>
 			<li><a href="https://code.google.com/apis/feed/" target="_blank">Google Feed API</a></li>
 			<li><a href="https://developers.facebook.com/docs/reference/javascript/" target="_blank">Facebook JavaScript SDK</a></li>
-			<!--<li><a href="http://developer.yahoo.com/yql/" target="_blank">YQL API</a></li>-->
+			<li><a href="http://developer.yahoo.com/yql/" target="_blank">YQL API</a></li>
 		</ul>
 	<button>關閉</button>		
 	</div>
