--- a/tests/jquery.getcontent.html
+++ b/tests/jquery.getcontent.html
@@ -66,19 +66,44 @@
 	<input type="submit" value="test" />
 	</p>
 </form>
+<h2>$.getContent(googleplus:me);</h2>
+<form method="get" action="#" id="googleplus">
+	<p>
+    <div id='fb-root'></div>
+	<input type="submit" value="test" />
+	</p>
+</form>
+<h2>$.getContent(googleplus:userid);</h2>
+<form method="get" action="#" id="googleplus_id">
+	<p>
+	<label>ID: <input type="text" id="googleplus_id_userid" size="20" value="106189723444098348646" /></label>
+	<input type="submit" value="test" />
+	</p>
+</form>
 <textarea id="result" readonly="true" cols="80" rows="30">
 </textarea>
 <script src="http://connect.facebook.net/en_US/all.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
 <script type="text/javascript" src="../jquery.getcontent.js"></script>
+<script type="text/javascript" src="../go2.js"></script>
 <script type="text/javascript">
 
 var FB_app_id = '';
+var googleAPIKey = '';
+var googleClientId = '';
 
 jQuery(function ($) {
 
 	if (!FB_app_id) {
 		alert('Add your own Facebook App ID to enable Facebook status fetching.');
+	}
+	
+	if (!googleAPIKey) {
+		alert('Add your own Google API Key to enable Google+ posts fetching.');
+	}
+
+	if (!googleClientId) {
+		alert('Add your own Google Client Id to enable private Google+ posts fetching.');
 	}
 
     FB.init({
@@ -87,6 +112,10 @@ jQuery(function ($) {
         cookie: true,
         xfbml: true
     });
+
+	GO2.init(
+		googleClientId
+	);
 
 	$('#feedSupported').addClass(($.getContent.feedSupported?'':'not_') + 'support');
 	$('#htmlSupported').addClass(($.getContent.htmlSupported?'':'not_') + 'support');
@@ -252,6 +281,52 @@ jQuery(function ($) {
 		start();
     }
 
+    $('#googleplus').bind(
+        'submit',
+		function () {
+			GO2.getToken(
+				test_googleplus
+			);
+
+			return false;
+        }
+    );
+
+    function test_googleplus(token) {
+		try {
+			$.getContent(
+				'me',
+				{
+					type: 'googleplus',
+					beforeComplete: beforeComplete,
+					complete: complete,
+					googleOAuthKey: token//,
+					//googleAPIKey: googleAPIKey
+				}
+			);
+		} catch (e) {error(e); }
+		start();
+		return false;
+    };
+
+    $('#googleplus_id').bind(
+        'submit',
+        function () {
+			try {
+				$.getContent(
+					$('#googleplus_id_userid').val(),
+					{
+						type: 'googleplus',
+						beforeComplete: beforeComplete,
+						complete: complete,
+						googleAPIKey: googleAPIKey
+					}
+				);
+			} catch (e) {error(e); }
+			start();
+            return false;
+        }
+    );
 });
 </script>
 </body>
