+ google+ as a hidden feature

--- a/en/index.html
+++ b/en/index.html
@@ -131,6 +131,7 @@
 		<ul>
 			<li><a href="https://code.google.com/apis/feed/" target="_blank">Google Feed API</a></li>
 			<li><a href="https://developers.facebook.com/docs/reference/javascript/" target="_blank">Facebook JavaScript SDK</a></li>
+			<li><a href="https://developers.google.com/+/" target="_blank">Google Plus API</a></li>
 			<li><a href="http://developer.yahoo.com/yql/" target="_blank">YQL API</a></li>
 		</ul>
 	<button>Close</button>		
@@ -138,6 +139,7 @@
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
 <script type="text/javascript" src="../jquery.wordcloud.js"></script>
+<script type="text/javascript" src="../go2.js"></script>
 <script type="text/javascript" src="../jquery.getcontent.js"></script>
 <script type="text/javascript" src="../worker.js"></script>
 <script type="text/javascript" src="../wordfreq.js"></script>
