--- a/tests/wordfreq.html
+++ b/tests/wordfreq.html
@@ -151,7 +151,7 @@ jQuery(function ($) {
 		'submit',
 		function () {
 			try {
-				done(wordfreq.empty());
+				wordfreq.empty(done);
 			} catch (e) { error(e); }
 			return false;
 		}
@@ -160,7 +160,7 @@ jQuery(function ($) {
 		'submit',
 		function () {
 			try {
-				done(wordfreq.getList());
+				wordfreq.getList(done);
 			} catch (e) { error(e); }
 			return false;
 		}
@@ -169,7 +169,7 @@ jQuery(function ($) {
 		'submit',
 		function () {
 			try {
-				done(wordfreq.getSortedList());
+				wordfreq.getSortedList(done);
 			} catch (e) { error(e); }
 			return false;
 		}
@@ -178,7 +178,7 @@ jQuery(function ($) {
 		'submit',
 		function () {
 			try {
-				done(wordfreq.analyizeVolume());
+				wordfreq.analyizeVolume(done);
 			} catch (e) { error(e); }
 			return false;
 		}
