--- a/en/index.html
+++ b/en/index.html
@@ -38,14 +38,18 @@
 <a id="ready" href="#" class="toggleUI ready center_btn">Ready</a>
 <div id="controls" class="toggleUI left_tool">
 	<ul>
-		<li><a href="#" class="changetheme"><span class="famfamfam_sprite color_wheel"></span>Change color scheme</a></li>
+		<li><a href="#" class="changetheme"><span class="famfamfam_sprite color_wheel"></span>Theme</a></li>
 		<li><a href="#" class="larger"><span class="famfamfam_sprite comment"></span>Larger Text</a></li>
 		<li><a href="#" class="smaller"><span class="famfamfam_sprite comments"></span>Smaller Text</a></li>
-		<!-- disable to novice user
 		<li><a href="#" class="thicker"><span class="famfamfam_sprite arrow_out"></span>Bigger Gap</a></li>		
 		<li><a href="#" class="thiner"><span class="famfamfam_sprite arrow_in"></span>Smaller Gap</a></li>
-		-->
 		<li><a href="#" class="ready"><span class="famfamfam_sprite arrow_refresh"></span>Regenerate</a></li>
+	</ul>
+</div>
+<div id="interactive" class="toggleUI left_tool">
+	<ul>
+		<li><a href="#" class="facebook"><span class="famfamfam_sprite facebook"></span>Facebook</a></li>
+		<li><a href="#" class="twitter"><span class="famfamfam_sprite twitter"></span>Twitter</a></li>
 		<li><a href="#" class="save"><span class="famfamfam_sprite disk"></span>Save</a></li>
 	</ul>
 </div>
@@ -180,7 +184,10 @@ var T = {
 	readyList_3: 'Maximum count $2 times',
 	readyList_3C: 20,
 	readyList_4: 'Click to start',
-	readyList_4C: 17
+	readyList_4C: 17,
+	listHeading: 'Most frequent terms: ',
+	listComma: ', ',
+	listEllipsis: '…'
 };
 </script>
 </body>
