--- a/zh/index.html
+++ b/zh/index.html
@@ -38,14 +38,19 @@
 <a id="ready" href="#" class="toggleUI ready center_btn">準備完成</a>
 <div id="controls" class="toggleUI left_tool">
 	<ul>
-		<li><a href="#" class="changetheme"><span class="famfamfam_sprite color_wheel"></span>切換色系</a></li>
+		<li><a href="#" class="changetheme"><span class="famfamfam_sprite color_wheel"></span>主題</a></li>
 		<li><a href="#" class="larger"><span class="famfamfam_sprite comment"></span>放大文字</a></li>
 		<li><a href="#" class="smaller"><span class="famfamfam_sprite comments"></span>縮小文字</a></li>
-		<!-- disable to novice user
-		<li><a href="#" class="thicker"><span class="famfamfam_sprite arrow_out"></span>增大間距</a></li>		
+		<li><a href="#" class="thicker"><span class="famfamfam_sprite arrow_out"></span>增大間距</a></li>
 		<li><a href="#" class="thiner"><span class="famfamfam_sprite arrow_in"></span>縮小間距</a></li>
-		-->
 		<li><a href="#" class="ready"><span class="famfamfam_sprite arrow_refresh"></span>重新排列</a></li>
+	</ul>
+</div>
+<div id="interactive" class="toggleUI left_tool">
+	<ul>
+		<li><a href="#" class="facebook"><span class="famfamfam_sprite facebook"></span>Facebook</a></li>
+		<li><a href="#" class="twitter"><span class="famfamfam_sprite twitter"></span>Twitter</a></li>
+		<li><a href="#" class="plurk"><span class="famfamfam_sprite plurk"></span>噗浪分享</a></li>
 		<li><a href="#" class="save"><span class="famfamfam_sprite disk"></span>儲存圖片</a></li>
 	</ul>
 </div>
@@ -184,7 +189,10 @@ var T = {
 	readyList_3: '最多重複 $2 次',
 	readyList_3C: 20,
 	readyList_4: '點選後開始',
-	readyList_4C: 17
+	readyList_4C: 17,
+	listHeading: '最常出現的詞彙：',
+	listComma: '、',
+	listEllipsis: '…'
 };
 </script>
 </body>
